--- a/css/main.css
+++ b/css/main.css
@@ -183,8 +183,8 @@ body {
   color: #fff;
   font-family: "Cabinet Grotesk", sans-serif;
   font-size: 18px;
+  max-width: 1900px;
   font-weight: 700;
-  background-color: rgb(0, 217, 255);
 }
 
 a {
@@ -201,11 +201,22 @@ img {
   margin: 0 auto;
 }
 
+.wrapper {
+  max-width: 1900px;
+  margin: 0 auto;
+}
+
+.main {
+  margin-top: 108px;
+}
+
 .header {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  z-index: 4;
 }
 @media (max-width: 900px) {
   .header {
@@ -329,6 +340,11 @@ img {
 .header__mobile-menu-list--active {
   transform: translate(0);
 }
+@media (min-width: 901px) {
+  .header__mobile-menu-list {
+    display: none;
+  }
+}
 .header__mobile-menu-socials {
   display: flex;
   gap: 10px;
@@ -348,6 +364,192 @@ img {
 
 .header__link:hover + .header__item-line {
   opacity: 1;
+}
+
+.mountain {
+  border-top: 1.5px solid rgba(255, 255, 255, 0.5);
+}
+.mountain__big-container {
+  max-width: 1820px;
+  margin: 0 0 0 auto;
+  display: flex;
+}
+.mountain__scroll {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 30px;
+  flex-direction: column;
+  margin-right: 60px;
+}
+.mountain__scroll-link {
+  display: flex;
+  align-items: center;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  font-size: 24px;
+  font-weight: 400;
+  gap: 12px;
+}
+.mountain__scroll-line {
+  height: 721px;
+  width: 1.5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 33px;
+}
+.mountain__img1 {
+  position: absolute;
+  top: 0;
+  z-index: -3;
+  width: 100%;
+}
+.mountain__img2 {
+  position: absolute;
+  z-index: -1;
+  top: 8px;
+  width: 100%;
+}
+.mountain__box {
+  max-width: 1240px;
+  margin: 0 auto;
+  position: absolute;
+  top: 172px;
+  z-index: -2;
+  left: 18.1%;
+}
+.mountain__box-line {
+  width: 646px;
+  height: 6px;
+  background-color: rgba(217, 217, 217, 0.4);
+  margin: 0 auto 20px;
+}
+.mountain__box-subtitle {
+  font-size: 56px;
+  font-weight: 700;
+  text-align: center;
+}
+.mountain__box-title {
+  font-size: 156px;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+  white-space: nowrap;
+}
+.mountain__right {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.mountain__video-button-box {
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 136px;
+  height: 136px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  align-self: center;
+  margin-bottom: auto;
+  margin-top: 347px;
+  backdrop-filter: blur(16px);
+  margin-right: 138px;
+}
+.mountain__slider {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.mountain__slider-first {
+  display: flex;
+  gap: 48px;
+  align-items: flex-end;
+}
+.mountain__slider-descr {
+  max-width: 510px;
+  height: 242px;
+}
+.mountain__facilities {
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(51, 51, 51, 0.2)), url("../images/mountain/svipimg1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 32px 32px 25px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 320px;
+  width: 304px;
+}
+.mountain__facilities-link {
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.mountain__facilities-text {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  align-self: center;
+}
+.mountain__slider-title {
+  font-size: 56px;
+  font-weight: 700;
+  margin-bottom: 26px;
+}
+.mountain__slider-subtitle {
+  font-family: "Inter", sans-serif;
+  font-size: 32px;
+  font-weight: 500;
+  color: #16F1FF;
+  margin-bottom: 30px;
+}
+.mountain__slider-text {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 177%;
+}
+.mountain__slider-second {
+  width: 507px;
+}
+.mountain__slider-blog {
+  font-size: 24px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 32px 32px 29px;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(16px);
+  border-radius: 12px 12px 0 0;
+}
+.mountain__slider-second-photo {
+  position: relative;
+  height: 159px;
+}
+.mountain__slider-second-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  object-fit: cover;
+  z-index: 1;
+  border-radius: 0 0 12px 12px;
+}
+.mountain__slider-second-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 3;
 }
 
 /*# sourceMappingURL=main.css.map */
