--- a/sass/blocks.scss/header.scss
+++ b/sass/blocks.scss/header.scss
@@ -4,6 +4,8 @@
   right: 0;
   left: 0;
   // padding: 32px 0;
+  background-color: rgba(255,255,255,0.1);
+  z-index: 4;
 
   @include on900 {
     padding: 30px 0;
@@ -137,6 +139,10 @@
 
     &--active {
       transform: translate(0);
+    }
+
+    @include on901 {
+      display: none;
     }
   }
 
