--- a/sass/blocks.scss/header.scss
+++ b/sass/blocks.scss/header.scss
@@ -125,6 +125,10 @@
   &__mobile-menu-list {
     position: fixed;
     background-color: #000;
+      background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(51, 51, 51, 0.2)),
+          url("../images/mountain/moutain-mobile.avif");
+          background-repeat: no-repeat;
+          background-size: cover;
     top: 100px;
     left: 0;
     width: 100%;
@@ -136,14 +140,14 @@
     gap: 20px;
     transform: translateY(120%);
     transition: transform 500ms ease-in;
-
+    z-index: 10;
     &--active {
       transform: translate(0);
     }
 
-    @include on901 {
-      display: none;
-    }
+    // @include on901 {
+    //   display: none;
+    // }
   }
 
   &__mobile-menu-socials {
@@ -158,6 +162,7 @@
 
     &:hover {
       transform: scale(1.2);
+      color: rgb(42, 101, 179);
     }
   }
 
