--- a/sass/blocks.scss/mountain.scss
+++ b/sass/blocks.scss/mountain.scss
@@ -1,11 +1,17 @@
 .mountain {
   border-top: 1.5px solid rgba(255, 255, 255, 0.50);
-  
+  // @include on1899 {
+  //   padding: 0 15px;
+  // }
 
   &__big-container {
     max-width: 1820px;
     margin: 0 0 0 auto;
     display: flex;
+
+    @include on1899 {
+      padding: 0 10px;
+    }
     
   }
 
@@ -16,6 +22,14 @@
     max-width: 30px;
     flex-direction: column;
     margin-right: 60px;
+
+    @include on750 {
+      margin-right: 20px;
+    }
+
+    @include on500 {
+      align-self: flex-start;
+    }
   }
 
   &__scroll-link {
@@ -58,7 +72,31 @@
     top: 172px;
     z-index: -2;
     left:18.1%;
+    top: 172px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    // @include on1600 {
+    //   left:12%;
+    // }
 
+    // @include on1450 {
+    //   z-index: 2;
+    //   opacity: 0.8;
+    // }
+
+    // @include on1100 {
+    //   left: 19%;
+    //   width: 100vw;
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    // }
+
+    @include on1500 {
+      z-index: 3;
+    }
   }
 
   &__box-line {
@@ -66,12 +104,38 @@
     height: 6px;
     background-color: rgba(217, 217, 217, 0.4);
     margin: 0 auto 20px;
+
+    @include on1450 {
+      width: 500px;
+    }
+
+    @include on750 {
+      max-width: 400px;
+    }
+
+    @include on480 {
+      max-width: 300px;
+    }
+
+   
   }
 
   &__box-subtitle {
     font-size: 56px;
     font-weight: 700;
     text-align: center;
+
+    @include on1450 {
+      font-size: 40px;
+    }
+
+    @include on750 {
+      font-size: 30px;
+    }
+
+    @include on500 {
+      font-size: 20px;
+    }
   }
 
   &__box-title {
@@ -80,6 +144,22 @@
     text-transform: uppercase;
     text-align: center;
     white-space: nowrap;
+
+    @include on1450 {
+      font-size: 120px;
+    }
+
+    @include on1100 {
+      font-size: 90px;
+    }
+
+    @include on750 {
+      font-size: 60px;
+    }
+
+    @include on500 {
+      font-size: 40px;
+    }
   }
 
   &__right {
@@ -98,29 +178,62 @@
     align-items: center;
     border-radius: 50%;
     border: 2px solid rgba(255,255,255,0.2);
-    // margin: 342px auto 106px;
+    margin: 342px auto 106px;
     align-self: center;
-    margin-bottom: auto;
-    margin-top: 347px;
+    // margin: 0 auto;
+    // z-index: 7 !important;
+    // margin-top: 347px;
     backdrop-filter: blur(16px);
-    margin-right: 138px;
+    // margin-right: 138px;
+    // margin: 0 auto;
+    position: relative;
+    // top: 0;
+    // bottom: 0;
+    // left: 0;
+    // right: 0;
+    // margin: auto;
+
+    // @include on1899 {
+    //   margin: auto 0;
+    // }
+
+    // @include on1599 {
+    //   margin: auto;
+    // }
+
+    @include on800 {
+      margin:auto;
+      margin-top: 230px;
+      margin-bottom: 50px;
+    }
+
+    @include on480 {
+      margin-top:170px;
+    }
   }
 
   &__slider {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    overflow: hidden;
   }
 
   &__slider-first {
     display: flex;
     gap: 48px;
     align-items: flex-end;
+
+    @include on800 {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__slider-descr {
     max-width: 510px;
     height: 242px;
+
+    @include on800 {
+      width: 100%;
+    }
   }
 
   &__facilities {
@@ -136,6 +249,20 @@
     align-items: flex-start;
     height: 320px;
     width: 304px;
+
+    @include on1450 {
+      aspect-ratio: 1/1.2;
+    }
+
+    @include on1250 {
+      max-width: 260px;
+      max-height: 240px;
+    }
+
+    @include on400 {
+      max-width: 200px;
+      max-height: 200px;
+    }
   
   }
   &__facilities-link {
@@ -156,6 +283,16 @@
     font-size: 56px;
     font-weight: 700;
     margin-bottom: 26px;
+
+    @include on1450 {
+      font-size: 40px;
+      margin-bottom: 20px;
+    }
+
+    @include on400 {
+      font-size: 30px;
+      margin-bottom: 10px;
+    }
   }
 
   &__slider-subtitle {
@@ -164,6 +301,15 @@
     font-weight: 500;
     color: #16F1FF;
     margin-bottom: 30px;
+
+    @include on1450 {
+      font-size: 26px;
+      margin-bottom: 20px;
+    }
+
+    @include on400 {
+      font-size: 22px;
+    }
   }
 
   &__slider-text {
@@ -171,11 +317,26 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 177%;
+
+    @include on1450 {
+      font-size: 16px;
+    }
   }
 
   &__slider-second {
     width: 507px;
+
+    @include on1899 {
+      max-width: 500px;
+    }
+
+    @include on1450 {
+      aspect-ratio: 2/1;
+    }
     
+    @include on1160 {
+      display: none;
+    }
   }
 
   &__slider-blog {
@@ -216,4 +377,51 @@
     background-color: rgba(0, 0, 0, 0.20);
     z-index: 3;
   }
+
+  &__video-box {
+    background-color: red;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50%;
+    height: 50%;
+    display: none;
+    transform: translate(-50%, -50%);
+    &_active {
+      display: block;
+    }
+
+  }
+
+  &__video {
+    width: 100%;
+    padding-top: 56.25%;
+    margin: 0 auto;
+    position: relative;
+  }
+
+
+
+  &__video iframe {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+  }
+}
+
+.swiper-wrapper {
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+
+    @include on1160 {
+      // flex-direction: column;
+    }
 }
