--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,7 @@ body {
   max-width: 1900px;
   font-weight: 700;
   background-color: #000;
+  overflow-x: hidden;
 }
 
 a {
@@ -217,7 +218,7 @@ img {
   right: 0;
   left: 0;
   background-color: rgba(255, 255, 255, 0.1);
-  z-index: 4;
+  z-index: 7;
 }
 @media (max-width: 900px) {
   .header {
@@ -344,6 +345,11 @@ img {
 }
 .header__mobile-menu-list--active {
   transform: translate(0);
+}
+@media (min-width: 901px) {
+  .header__mobile-menu-list {
+    display: none;
+  }
 }
 .header__mobile-menu-socials {
   display: flex;
@@ -545,6 +551,12 @@ img {
 }
 .mountain__slider {
   overflow: hidden;
+  max-width: 1730px;
+}
+@media (max-width: 1899px) {
+  .mountain__slider {
+    max-width: 90%;
+  }
 }
 .mountain__slider-first {
   display: flex;
@@ -734,10 +746,9 @@ img {
   bottom: 0;
   width: 100%;
   height: 100%;
-  z-index: 5;
 }
 
-.swiper-wrapper {
+.swiper-slide {
   display: flex;
   justify-content: space-between;
   align-items: center;
