--- a/sass/blocks.scss/header.scss
+++ b/sass/blocks.scss/header.scss
@@ -5,7 +5,7 @@
   left: 0;
   // padding: 32px 0;
   background-color: rgba(255,255,255,0.1);
-  z-index: 4;
+  z-index: 7;
 
   @include on900 {
     padding: 30px 0;
@@ -145,9 +145,9 @@
       transform: translate(0);
     }
 
-    // @include on901 {
-    //   display: none;
-    // }
+    @include on901 {
+      display: none;
+    }
   }
 
   &__mobile-menu-socials {
