--- a/sass/blocks.scss/mountain.scss
+++ b/sass/blocks.scss/mountain.scss
@@ -3,7 +3,7 @@
   // @include on1899 {
   //   padding: 0 15px;
   // }
-
+overflow: hidden;
   &__big-container {
     max-width: 1820px;
     margin: 0 0 0 auto;
@@ -187,6 +187,7 @@
     // margin-right: 138px;
     // margin: 0 auto;
     position: relative;
+    margin: 0 auto;
     // z-index: 10;
     // top: 0;
     // bottom: 0;
